--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on June 09 2022 | 14:40 IST</p>
-<p>Webpage updated on June 09 2022 | 14:42 IST</p>
+<p>Details updated on June 10 2022 | 14:29 IST</p>
+<p>Webpage updated on June 10 2022 | 14:35 IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -42,22 +42,22 @@
         <tr>
             <td>Rank</td>
             <td>Student Name</td>
-            <td>No. of Quests Completed</td>
-            <td>No. of Skill Badges Completed</td>
+            <td># of Quests Completed</td>
+            <td># of Skill Badges Completed</td>
             <td>Total</td>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>1</td>
-            <td>Shaurya Saxena</td>
+            <td>Yash Sutaria</td>
             <td>40</td>
-            <td>19</td>
-            <td>59</td>
+            <td>20</td>
+            <td>60</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Yash Sutaria</td>
+            <td>Shaurya Saxena</td>
             <td>40</td>
             <td>19</td>
             <td>59</td>
@@ -66,15 +66,15 @@
             <td>3</td>
             <td>Singu Aditya</td>
             <td>39</td>
-            <td>18</td>
-            <td>57</td>
+            <td>19</td>
+            <td>58</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Srijeev Bhowal</td>
-            <td>35</td>
+            <td>36</td>
             <td>15</td>
-            <td>50</td>
+            <td>51</td>
         </tr>
         <tr>
             <td>5</td>
@@ -86,37 +86,37 @@
         <tr>
             <td>6</td>
             <td>Sparsh Khandelwal</td>
-            <td>32</td>
-            <td>13</td>
-            <td>45</td>
+            <td>33</td>
+            <td>15</td>
+            <td>48</td>
         </tr>
         <tr>
             <td>7</td>
             <td>Tirth Govani</td>
-            <td>29</td>
-            <td>15</td>
-            <td>44</td>
+            <td>31</td>
+            <td>16</td>
+            <td>47</td>
         </tr>
         <tr>
             <td>8</td>
             <td>Monu Pawar</td>
+            <td>24</td>
+            <td>14</td>
+            <td>38</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Aman Singh Bhogal</td>
             <td>23</td>
             <td>14</td>
             <td>37</td>
         </tr>
         <tr>
-            <td>9</td>
+            <td>10</td>
             <td>Komal Gokani</td>
             <td>24</td>
             <td>12</td>
             <td>36</td>
-        </tr>
-        <tr>
-            <td>10</td>
-            <td>Aman Singh Bhogal</td>
-            <td>20</td>
-            <td>14</td>
-            <td>34</td>
         </tr>
         <tr>
             <td>11</td>
@@ -134,17 +134,17 @@
         </tr>
         <tr>
             <td>13</td>
+            <td>vedang tushar bhagare</td>
+            <td>12</td>
+            <td>12</td>
+            <td>24</td>
+        </tr>
+        <tr>
+            <td>14</td>
             <td>Poornima Prakash Mahajan</td>
             <td>21</td>
             <td>0</td>
             <td>21</td>
-        </tr>
-        <tr>
-            <td>14</td>
-            <td>vedang tushar bhagare</td>
-            <td>10</td>
-            <td>10</td>
-            <td>20</td>
         </tr>
         <tr>
             <td>15</td>
@@ -155,23 +155,23 @@
         </tr>
         <tr>
             <td>16</td>
-            <td>Bhushan Suresh Mahajan</td>
-            <td>10</td>
+            <td>Dhruvi Sethi</td>
+            <td>12</td>
             <td>7</td>
-            <td>17</td>
+            <td>19</td>
         </tr>
         <tr>
             <td>17</td>
-            <td>Dhruvi Sethi</td>
-            <td>11</td>
-            <td>6</td>
-            <td>17</td>
+            <td>Gourav Jhawar</td>
+            <td>12</td>
+            <td>7</td>
+            <td>19</td>
         </tr>
         <tr>
             <td>18</td>
-            <td>Gourav Jhawar</td>
-            <td>11</td>
-            <td>6</td>
+            <td>Bhushan Suresh Mahajan</td>
+            <td>10</td>
+            <td>7</td>
             <td>17</td>
         </tr>
         <tr>
@@ -197,23 +197,23 @@
         </tr>
         <tr>
             <td>22</td>
+            <td>Rahul Noolu</td>
+            <td>14</td>
+            <td>0</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>23</td>
             <td>Nitin kashinath hadpe</td>
             <td>7</td>
             <td>6</td>
             <td>13</td>
         </tr>
         <tr>
-            <td>23</td>
+            <td>24</td>
             <td>Amit Agarwal</td>
             <td>11</td>
             <td>1</td>
-            <td>12</td>
-        </tr>
-        <tr>
-            <td>24</td>
-            <td>Rahul Noolu</td>
-            <td>12</td>
-            <td>0</td>
             <td>12</td>
         </tr>
         <tr>
@@ -239,77 +239,77 @@
         </tr>
         <tr>
             <td>28</td>
+            <td>Naman Jain</td>
+            <td>8</td>
+            <td>2</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>29</td>
             <td>Sakshi Arun Gawale</td>
             <td>10</td>
             <td>0</td>
             <td>10</td>
         </tr>
         <tr>
-            <td>29</td>
-            <td>Benson Cordeiro</td>
-            <td>4</td>
-            <td>4</td>
-            <td>8</td>
-        </tr>
-        <tr>
             <td>30</td>
-            <td>Naman Jain</td>
-            <td>6</td>
-            <td>2</td>
-            <td>8</td>
+            <td>Benson Cordeiro</td>
+            <td>5</td>
+            <td>4</td>
+            <td>9</td>
         </tr>
         <tr>
             <td>31</td>
+            <td>Parth Kirit Parmar</td>
+            <td>7</td>
+            <td>2</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>32</td>
             <td>Vedant Dnyaneshwar Patil</td>
             <td>4</td>
             <td>4</td>
             <td>8</td>
         </tr>
         <tr>
-            <td>32</td>
+            <td>33</td>
             <td>Jayvardhan Bhardwaj</td>
             <td>6</td>
             <td>1</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>33</td>
+            <td>34</td>
             <td>Khushvardhan Bhardwaj</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>34</td>
+            <td>35</td>
             <td>Madhur Manoj Jajodia</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>35</td>
+            <td>36</td>
             <td>Vishal Lotan Patil</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>36</td>
+            <td>37</td>
             <td>Akash Sanjay Kolhe</td>
             <td>6</td>
             <td>0</td>
             <td>6</td>
         </tr>
         <tr>
-            <td>37</td>
-            <td>DIYA GANDHI</td>
-            <td>4</td>
-            <td>2</td>
-            <td>6</td>
-        </tr>
-        <tr>
             <td>38</td>
-            <td>Parth Kirit Parmar</td>
+            <td>DIYA GANDHI</td>
             <td>4</td>
             <td>2</td>
             <td>6</td>
@@ -323,51 +323,51 @@
         </tr>
         <tr>
             <td>40</td>
-            <td>Prashant Madhukar Bagul</td>
+            <td>Pakhi Gupta</td>
             <td>3</td>
             <td>2</td>
             <td>5</td>
         </tr>
         <tr>
             <td>41</td>
+            <td>Prashant Madhukar Bagul</td>
+            <td>3</td>
+            <td>2</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>42</td>
             <td>Pruthvi Rajendra Kolhe</td>
             <td>5</td>
             <td>0</td>
             <td>5</td>
         </tr>
         <tr>
-            <td>42</td>
+            <td>43</td>
             <td>Sanyam Jain</td>
             <td>5</td>
             <td>0</td>
             <td>5</td>
         </tr>
         <tr>
-            <td>43</td>
+            <td>44</td>
             <td>Aishwarya Dhanraj Borole</td>
             <td>4</td>
             <td>0</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>44</td>
+            <td>45</td>
             <td>Aniket Bhagwan Ahire</td>
             <td>2</td>
             <td>2</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>45</td>
+            <td>46</td>
             <td>Ayush Sachin Ghatkar</td>
             <td>1</td>
             <td>3</td>
-            <td>4</td>
-        </tr>
-        <tr>
-            <td>46</td>
-            <td>Pakhi Gupta</td>
-            <td>2</td>
-            <td>2</td>
             <td>4</td>
         </tr>
         <tr>
@@ -498,58 +498,58 @@
         </tr>
         <tr>
             <td>65</td>
+            <td>Prathamesh Hire</td>
+            <td>0</td>
+            <td>2</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>66</td>
             <td>Punith Krishna Gowda</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>66</td>
+            <td>67</td>
             <td>Rohit Achyut Tupke</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>67</td>
+            <td>68</td>
             <td>Sidhesh Sanjeev Joshi</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>68</td>
+            <td>69</td>
             <td>Vasu Choudhary</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>69</td>
+            <td>70</td>
             <td>Aditya Mantri</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>70</td>
+            <td>71</td>
             <td>Divya Prakash Gadekar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>71</td>
+            <td>72</td>
             <td>Divya Siddharth Dhnarao</td>
             <td>1</td>
             <td>0</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>72</td>
-            <td>Prathamesh Hire</td>
-            <td>0</td>
-            <td>1</td>
             <td>1</td>
         </tr>
         <tr>
