--- a/index.html
+++ b/index.html
@@ -33,17 +33,32 @@
 
 </section>
 <br>
-
-<h3>Find Your Name :</h3>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
+<h3>Leaderboard [Ultimate Milestone]</h3>
+<br>
+<table id="table2">
+    <tr>
+        <th>Rank</th>
+        <th>Student Name</th>
+        <th>Date of completion</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Yash Sutaria</td>
+        <td>June 10, 2022</td>
+    </tr>
+</table>
 <br><br>
+<h3>Progress</h3>
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names...">
+<br>
+<br>
 <table id="table">
     <thead>
         <tr>
-            <td>Rank</td>
+            <td>Sr. No.</td>
             <td>Student Name</td>
-            <td># of Quests Completed</td>
-            <td># of Skill Badges Completed</td>
+            <td>No. of Quests Completed</td>
+            <td>No. of Skill Badges Completed</td>
             <td>Total</td>
         </tr>
     </thead>
