--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on June 10 2022 | 14:29 IST</p>
-<p>Webpage updated on June 10 2022 | 18:59 IST</p>
+<p>Details updated on June 10 2022 | 14:25 IST</p>
+<p>Webpage updated on June 10 2022 | 14:29 IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -49,6 +49,17 @@
         <td>Yash Sutaria</td>
         <td>June 10, 2022</td>
     </tr>
+    <tr>
+        <td>2</td>
+        <td>Shaurya Saxena</td>
+        <td>June 11, 2022</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Singu Aditya</td>
+        <td>June 11, 2022</td>
+    </tr>
+    
 </table>
 <br><br>
 <h3>Progress</h3>
@@ -69,59 +80,59 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>Yash Sutaria</td>
+            <td>Shaurya Saxena</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Shaurya Saxena</td>
+            <td>Singu Aditya</td>
             <td>40</td>
-            <td>19</td>
-            <td>59</td>
+            <td>20</td>
+            <td>60</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>Singu Aditya</td>
-            <td>39</td>
-            <td>19</td>
-            <td>58</td>
+            <td>Yash Sutaria</td>
+            <td>40</td>
+            <td>20</td>
+            <td>60</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Srijeev Bhowal</td>
-            <td>36</td>
+            <td>38</td>
             <td>15</td>
-            <td>51</td>
+            <td>53</td>
         </tr>
         <tr>
             <td>5</td>
+            <td>Sparsh Khandelwal</td>
+            <td>34</td>
+            <td>16</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>6</td>
             <td>Devesh ranjan kharade</td>
             <td>32</td>
             <td>16</td>
             <td>48</td>
         </tr>
         <tr>
-            <td>6</td>
-            <td>Sparsh Khandelwal</td>
-            <td>33</td>
-            <td>15</td>
-            <td>48</td>
-        </tr>
-        <tr>
             <td>7</td>
             <td>Tirth Govani</td>
-            <td>31</td>
+            <td>32</td>
             <td>16</td>
-            <td>47</td>
+            <td>48</td>
         </tr>
         <tr>
             <td>8</td>
             <td>Monu Pawar</td>
-            <td>24</td>
-            <td>14</td>
-            <td>38</td>
+            <td>27</td>
+            <td>15</td>
+            <td>42</td>
         </tr>
         <tr>
             <td>9</td>
@@ -140,9 +151,9 @@
         <tr>
             <td>11</td>
             <td>Amruta Anil Patil</td>
-            <td>14</td>
-            <td>10</td>
-            <td>24</td>
+            <td>16</td>
+            <td>11</td>
+            <td>27</td>
         </tr>
         <tr>
             <td>12</td>
@@ -160,45 +171,45 @@
         </tr>
         <tr>
             <td>14</td>
+            <td>Gourav Jhawar</td>
+            <td>13</td>
+            <td>8</td>
+            <td>21</td>
+        </tr>
+        <tr>
+            <td>15</td>
             <td>Poornima Prakash Mahajan</td>
             <td>21</td>
             <td>0</td>
             <td>21</td>
         </tr>
         <tr>
-            <td>15</td>
+            <td>16</td>
             <td>Akshat jain</td>
             <td>12</td>
             <td>7</td>
             <td>19</td>
         </tr>
         <tr>
-            <td>16</td>
+            <td>17</td>
             <td>Dhruvi Sethi</td>
             <td>12</td>
             <td>7</td>
             <td>19</td>
         </tr>
         <tr>
+            <td>18</td>
+            <td>Divya Ranjan Kharade</td>
             <td>17</td>
-            <td>Gourav Jhawar</td>
-            <td>12</td>
-            <td>7</td>
+            <td>2</td>
             <td>19</td>
         </tr>
         <tr>
-            <td>18</td>
+            <td>19</td>
             <td>Bhushan Suresh Mahajan</td>
             <td>10</td>
             <td>7</td>
             <td>17</td>
-        </tr>
-        <tr>
-            <td>19</td>
-            <td>Divya Ranjan Kharade</td>
-            <td>15</td>
-            <td>1</td>
-            <td>16</td>
         </tr>
         <tr>
             <td>20</td>
@@ -251,94 +262,94 @@
         </tr>
         <tr>
             <td>27</td>
-            <td>Simoni Thanvi</td>
+            <td>Parth Kirit Parmar</td>
             <td>7</td>
             <td>4</td>
             <td>11</td>
         </tr>
         <tr>
             <td>28</td>
+            <td>Simoni Thanvi</td>
+            <td>7</td>
+            <td>4</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>29</td>
             <td>Naman Jain</td>
             <td>8</td>
             <td>2</td>
             <td>10</td>
         </tr>
         <tr>
-            <td>29</td>
+            <td>30</td>
             <td>Sakshi Arun Gawale</td>
             <td>10</td>
             <td>0</td>
             <td>10</td>
         </tr>
         <tr>
-            <td>30</td>
+            <td>31</td>
             <td>Benson Cordeiro</td>
             <td>5</td>
             <td>4</td>
             <td>9</td>
         </tr>
         <tr>
-            <td>31</td>
-            <td>Parth Kirit Parmar</td>
+            <td>32</td>
+            <td>Khushvardhan Bhardwaj</td>
             <td>7</td>
-            <td>2</td>
-            <td>9</td>
+            <td>1</td>
+            <td>8</td>
         </tr>
         <tr>
-            <td>32</td>
+            <td>33</td>
+            <td>MILIND MURLI GUPTA</td>
+            <td>4</td>
+            <td>4</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>34</td>
             <td>Vedant Dnyaneshwar Patil</td>
             <td>4</td>
             <td>4</td>
             <td>8</td>
         </tr>
         <tr>
-            <td>33</td>
+            <td>35</td>
             <td>Jayvardhan Bhardwaj</td>
             <td>6</td>
             <td>1</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>34</td>
-            <td>Khushvardhan Bhardwaj</td>
-            <td>7</td>
-            <td>0</td>
-            <td>7</td>
-        </tr>
-        <tr>
-            <td>35</td>
+            <td>36</td>
             <td>Madhur Manoj Jajodia</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>36</td>
+            <td>37</td>
             <td>Vishal Lotan Patil</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
-            <td>37</td>
+            <td>38</td>
             <td>Akash Sanjay Kolhe</td>
             <td>6</td>
             <td>0</td>
             <td>6</td>
         </tr>
         <tr>
-            <td>38</td>
+            <td>39</td>
             <td>DIYA GANDHI</td>
             <td>4</td>
             <td>2</td>
             <td>6</td>
-        </tr>
-        <tr>
-            <td>39</td>
-            <td>MILIND MURLI GUPTA</td>
-            <td>2</td>
-            <td>3</td>
-            <td>5</td>
         </tr>
         <tr>
             <td>40</td>
@@ -370,30 +381,30 @@
         </tr>
         <tr>
             <td>44</td>
+            <td>Sukhada Mahale.</td>
+            <td>3</td>
+            <td>2</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>45</td>
             <td>Aishwarya Dhanraj Borole</td>
             <td>4</td>
             <td>0</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>45</td>
+            <td>46</td>
             <td>Aniket Bhagwan Ahire</td>
             <td>2</td>
             <td>2</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>46</td>
+            <td>47</td>
             <td>Ayush Sachin Ghatkar</td>
             <td>1</td>
             <td>3</td>
-            <td>4</td>
-        </tr>
-        <tr>
-            <td>47</td>
-            <td>Sukhada Mahale.</td>
-            <td>2</td>
-            <td>2</td>
             <td>4</td>
         </tr>
         <tr>
@@ -440,84 +451,84 @@
         </tr>
         <tr>
             <td>54</td>
+            <td>Prathamesh Hire</td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>55</td>
             <td>Sai Jadhav</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>55</td>
+            <td>56</td>
             <td>Sara Jagdish Pardeshi</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>56</td>
+            <td>57</td>
             <td>Shivam Sharma</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>57</td>
+            <td>58</td>
             <td>Vrushali Navnath Lawand</td>
             <td>1</td>
             <td>2</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>58</td>
+            <td>59</td>
             <td>AYUSH KAST</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>59</td>
+            <td>60</td>
             <td>Bhavesh Yogesh Kolhe</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>60</td>
+            <td>61</td>
             <td>Bhushan Karape</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>61</td>
+            <td>62</td>
             <td>Edmond Jonathan Jeremiah</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>62</td>
+            <td>63</td>
             <td>Jadhav samta sanjay</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>63</td>
+            <td>64</td>
             <td>Lokesh Anil Bhamare</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>64</td>
-            <td>Pratham Patil</td>
-            <td>0</td>
-            <td>2</td>
-            <td>2</td>
-        </tr>
-        <tr>
             <td>65</td>
-            <td>Prathamesh Hire</td>
+            <td>Pratham Patil</td>
             <td>0</td>
             <td>2</td>
             <td>2</td>
