--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         <td>Singu Aditya</td>
         <td>June 11, 2022</td>
     </tr>
+    <tr>
+        <td>3</td>
+        <td>Sprash Khandelwal</td>
+        <td>June 12, 2022</td>
+    </tr>
     
 </table>
 <br><br>
@@ -94,24 +99,24 @@
         </tr>
         <tr>
             <td>3</td>
-            <td>Yash Sutaria</td>
+            <td>Sparsh Khandelwal</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Srijeev Bhowal</td>
-            <td>38</td>
-            <td>15</td>
-            <td>53</td>
+            <td>Yash Sutaria</td>
+            <td>40</td>
+            <td>20</td>
+            <td>60</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>Sparsh Khandelwal</td>
-            <td>34</td>
+            <td>Srijeev Bhowal</td>
+            <td>38</td>
             <td>16</td>
-            <td>50</td>
+            <td>54</td>
         </tr>
         <tr>
             <td>6</td>
@@ -144,9 +149,9 @@
         <tr>
             <td>10</td>
             <td>Komal Gokani</td>
-            <td>24</td>
+            <td>25</td>
             <td>12</td>
-            <td>36</td>
+            <td>37</td>
         </tr>
         <tr>
             <td>11</td>
@@ -171,142 +176,142 @@
         </tr>
         <tr>
             <td>14</td>
+            <td>Divya Ranjan Kharade</td>
+            <td>18</td>
+            <td>5</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Dhruvi Sethi</td>
+            <td>14</td>
+            <td>7</td>
+            <td>21</td>
+        </tr>
+        <tr>
+            <td>16</td>
             <td>Gourav Jhawar</td>
             <td>13</td>
             <td>8</td>
             <td>21</td>
         </tr>
         <tr>
-            <td>15</td>
+            <td>17</td>
             <td>Poornima Prakash Mahajan</td>
             <td>21</td>
             <td>0</td>
             <td>21</td>
         </tr>
         <tr>
-            <td>16</td>
+            <td>18</td>
             <td>Akshat jain</td>
             <td>12</td>
-            <td>7</td>
-            <td>19</td>
-        </tr>
-        <tr>
-            <td>17</td>
-            <td>Dhruvi Sethi</td>
-            <td>12</td>
-            <td>7</td>
-            <td>19</td>
-        </tr>
-        <tr>
-            <td>18</td>
-            <td>Divya Ranjan Kharade</td>
-            <td>17</td>
-            <td>2</td>
-            <td>19</td>
+            <td>8</td>
+            <td>20</td>
         </tr>
         <tr>
             <td>19</td>
+            <td>Rahul Noolu</td>
+            <td>19</td>
+            <td>50</td>
+            <td>69</td>
+        </tr>
+        <tr>
+            <td>20</td>
             <td>Bhushan Suresh Mahajan</td>
             <td>10</td>
             <td>7</td>
             <td>17</td>
         </tr>
         <tr>
-            <td>20</td>
+            <td>21</td>
             <td>Aditya Rajendra Hyalij</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
         </tr>
         <tr>
-            <td>21</td>
+            <td>22</td>
             <td>Yashi Srivastava</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
         </tr>
         <tr>
-            <td>22</td>
-            <td>Rahul Noolu</td>
-            <td>14</td>
-            <td>0</td>
-            <td>14</td>
-        </tr>
-        <tr>
             <td>23</td>
             <td>Nitin kashinath hadpe</td>
-            <td>7</td>
+            <td>8</td>
             <td>6</td>
-            <td>13</td>
+            <td>14</td>
         </tr>
         <tr>
             <td>24</td>
+            <td>MILIND MURLI GUPTA</td>
+            <td>8</td>
+            <td>5</td>
+            <td>13</td>
+        </tr>
+        <tr>
+            <td>25</td>
             <td>Amit Agarwal</td>
             <td>11</td>
             <td>1</td>
             <td>12</td>
         </tr>
         <tr>
-            <td>25</td>
+            <td>26</td>
+            <td>Parth Kirit Parmar</td>
+            <td>7</td>
+            <td>5</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>27</td>
             <td>Ishwari Pramod Deore</td>
             <td>11</td>
             <td>0</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>26</td>
+            <td>28</td>
             <td>Jay Patil</td>
             <td>6</td>
             <td>5</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>27</td>
-            <td>Parth Kirit Parmar</td>
-            <td>7</td>
-            <td>4</td>
+            <td>29</td>
+            <td>Naman Jain</td>
+            <td>9</td>
+            <td>2</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>28</td>
+            <td>30</td>
+            <td>Sakshi Arun Gawale</td>
+            <td>11</td>
+            <td>0</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>31</td>
             <td>Simoni Thanvi</td>
             <td>7</td>
             <td>4</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>29</td>
-            <td>Naman Jain</td>
-            <td>8</td>
-            <td>2</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>30</td>
-            <td>Sakshi Arun Gawale</td>
-            <td>10</td>
-            <td>0</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>31</td>
+            <td>32</td>
             <td>Benson Cordeiro</td>
             <td>5</td>
             <td>4</td>
             <td>9</td>
         </tr>
         <tr>
-            <td>32</td>
+            <td>33</td>
             <td>Khushvardhan Bhardwaj</td>
             <td>7</td>
             <td>1</td>
-            <td>8</td>
-        </tr>
-        <tr>
-            <td>33</td>
-            <td>MILIND MURLI GUPTA</td>
-            <td>4</td>
-            <td>4</td>
             <td>8</td>
         </tr>
         <tr>
@@ -388,100 +393,100 @@
         </tr>
         <tr>
             <td>45</td>
-            <td>Aishwarya Dhanraj Borole</td>
+            <td>Advait Upendra Shukla</td>
             <td>4</td>
             <td>0</td>
             <td>4</td>
         </tr>
         <tr>
             <td>46</td>
+            <td>Aishwarya Dhanraj Borole</td>
+            <td>4</td>
+            <td>0</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>47</td>
             <td>Aniket Bhagwan Ahire</td>
             <td>2</td>
             <td>2</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>47</td>
+            <td>48</td>
             <td>Ayush Sachin Ghatkar</td>
             <td>1</td>
             <td>3</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>48</td>
+            <td>49</td>
             <td>Vedant Tangadpalliwar</td>
             <td>2</td>
             <td>2</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>49</td>
-            <td>Advait Upendra Shukla</td>
-            <td>3</td>
-            <td>0</td>
-            <td>3</td>
+            <td>50</td>
+            <td>Vrushali Navnath Lawand</td>
+            <td>2</td>
+            <td>2</td>
+            <td>4</td>
         </tr>
         <tr>
-            <td>50</td>
+            <td>51</td>
             <td>Devesh Tushar Vaidya</td>
             <td>2</td>
             <td>1</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>51</td>
+            <td>52</td>
             <td>Hiren Manani</td>
             <td>2</td>
             <td>1</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>52</td>
+            <td>53</td>
             <td>Kedar Rishabh Pravin</td>
             <td>2</td>
             <td>1</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>53</td>
+            <td>54</td>
             <td>Omkar Pardeshi</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>54</td>
+            <td>55</td>
             <td>Prathamesh Hire</td>
             <td>1</td>
             <td>2</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>55</td>
+            <td>56</td>
             <td>Sai Jadhav</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>56</td>
+            <td>57</td>
             <td>Sara Jagdish Pardeshi</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
-            <td>57</td>
+            <td>58</td>
             <td>Shivam Sharma</td>
             <td>3</td>
             <td>0</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>58</td>
-            <td>Vrushali Navnath Lawand</td>
-            <td>1</td>
-            <td>2</td>
             <td>3</td>
         </tr>
         <tr>
